fix overflow issue on homescreen

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -650,12 +650,11 @@ i {
 }
 
 .featured-videos {
-    margin-top: 60px;
-    align-items: left;
-    justify-content: center;
-    display: flex;
-    margin-right: 240px;
+    position: fixed;
+    top: 100px;
+    left: 300px;
     width: 87%;
+    height:100vh;
 }
 
 .featured-videos > h1 {
@@ -663,14 +662,20 @@ i {
     line-height: 1;
     font-size: 28px;
     font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+    margin: 10px;
+    width: 87%;
 }
 
 .game-index-list-items-scroll {
-    display: flex;
     justify-content: flex-start;
-    margin-right: 100px;
-    margin-left: 40px;
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-    width: 85%;
+    position: fixed;
+    top: 250px;
+    left: 250px;
+    width: 87%;
+    display: flex;
+    /* flex-direction: column; */
+    height: calc(100vh - 310px);
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    margin-bottom: 30px;
 }
